collapse button still not working as expected.  Considering rewrite. Active class fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -6,31 +6,6 @@ html {
     background-size: cover;
 }
 
-/*.background-tint {
-    background: 
-        linear-gradient(
-            rgba(0, 0, 0, .3),
-            rgba(0, 0, 0, .3),
-
-        ),
-        url("https://i.imgur.com/EDCcWMQ.jpg") no-repeat center center fixed;
-}
-*/
-/*.intro-2 {
-    background-image: url("https://i.imgur.com/EDCcWMQ.jpg"); 
-    background-repeat: no-repeat; 
-    background-position: center center;
-    background-size: cover;
-}*/
-
-/*.hm-gradient .full-bg-img {
-    background: -moz-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(29, 210, 177, 0.6) 100%);
-    background: -webkit-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(29, 210, 177, 0.6) 100%);
-    background: -webkit-gradient(linear, 45deg, from(rgba(42, 27, 161, 0.6)), to(rgba(29, 210, 177, 0.6)));
-    background: -o-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(29, 210, 177, 0.6) 100%);
-    background: linear-gradient(to 45deg, rgba(42, 27, 161, 0.6), rgba(29, 210, 177, 0.6) 100%);
-}*/
-
 body {
     font-family: 'Palanquin', sans-serif;
     color: white;
@@ -45,11 +20,11 @@ nav {
     margin: 0;
 }
 
-.navbar-nav{
+/*.navbar-nav{
     margin: 0;
     float: right;
 }
-
+*/
 ul li {
     float: right;
     display: block;
@@ -84,7 +59,3 @@ main {
 article {
     display: none;
 }
-/*
-article {
-    background-color: rgb(0,0,0,0);
-}*/
